# forkbombs

./: CMakeLists.txt  README.md  test-in-docker
c++/: CMakeLists.txt  forkbomb-c++-threads.cc
shell/: CMakeLists.txt  forkbomb-bash
